@@ -1,5 +1,7 @@
 2019-01-08  Carl Hetherington  <cth@carlh.net>
 
+	* Re-analyse audio when DCP channel count changes (#1189).
+
 	* Fix failure to re-analyse audio when the channel map changes (#1257).
 
 2019-01-06  Carl Hetherington  <cth@carlh.net>
